Cleanup obsolete WallpaperController Mash conditionals.

Bug: 613657, 622480
Change-Id: Ief1471c2f5830a99f9e650d7447b821c155e4a49
Reviewed-on: https://chromium-review.googlesource.com/1183900
Reviewed-by: James Cook <jamescook@chromium.org>
Commit-Queue: Michael Wasserman <msw@chromium.org>
Cr-Commit-Position: refs/heads/master@{#584882}
Former-commit-id: 4f7bb1dc11771a4d2ce63f26264377da0bd93a1e